--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,7 @@
 {
-  "name": "justbetter/magento2-sentry",
+  "name": "webidea24/magento2-sentry",
   "description": "Magento 2 Logger for Sentry",
   "type": "magento2-module",
-  "version": "3.2.0",
   "license": "MIT",
   "require": {
     "php": ">=7.0",
@@ -22,6 +21,12 @@
       "name": "Joseph Maxwell",
       "email": "joseph@swiftotter.com",
       "homepage": "https://swiftotter.com",
+      "role": "Developer"
+    },
+    {
+      "name": "Frederik Rommel",
+      "email": "github@webidea24.de",
+      "homepage": "https://webidea24.de",
       "role": "Developer"
     }
   ],
